--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^13.0.0",
     "next-connect": "^0.12.0",
+    "nodemailer": "^7.0.10",
     "razorpay": "^2.8.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
