--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "seed": "node scripts/seed.js"    
+    "seed": "node scripts/seed.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "busboy": "^1.6.0",
     "cloudinary": "^1.30.0",
     "cookie": "^0.5.0",
     "formidable": "^3.5.4",
